Issue number: PCN20707 - Allow specification of an artifact type as for use by the application, and therefore immutable from the admin ui.
#getAssociatedIssueTypes()-New method added to get the list of issue types an
attribute is associated with.
#isSystemDefined()-New method added to check if the attribute is associated with
a system specified issue type.

src/java/org/tigris/scarab/om/IssueType.java
#isSystemDefined()-New method added to check if it is a system specified issue type.

src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypeCreate.java
src/java/org/tigris/scarab/actions/admin/GlobalAttributeEdit.java
src/java/org/tigris/scarab/actions/admin/IssueTypeAttributeEdit.java
src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java
src/java/org/tigris/scarab/actions/admin/AttributeGroupEdit.java
src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypes.java
src/templates/screens/admin/GlobalArtifactTypeEdit.vm
src/templates/screens/admin/GlobalAttributeGroupEdit.vm
src/templates/screens/admin/GlobalAttributeEdit.vm
src/templates/screens/admin/UserAttributeEdit.vm
src/templates/screens/admin/ArtifactTypeEdit.vm
src/templates/screens/admin/AttributeGroupEdit.vm
src/templates/screens/admin/GlobalArtifactTypeShow.vm
#In all the above files, it is checked if the issue type/attribute is system
defined and if so, actions related to deleting/editing are prevented.

src/i18n/ScarabBundle_en_US.properties
#New resources added to alert when the user attempts to edit system defined
artifact types.

Submitted by: venkat@collab.net
Reviewed by: jmcnally@collab.net

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1058,7 +1058,8 @@ NoIssueTypesSelected=No issue types were selected.
 CannotDeleteIssueTypesWithIssues=You cannot delete an issue type that has issues already associated with it.
 IssueTypeHasIssues=This issue type has issues associated with it.
 GlobalArtifactTypeCopied=Global artifact type copied
-
+SystemSpecifiedIssueType=This issue type is system defined and hence cannot be edited.
+CannotDeleteSystemSpecifiedIssueType=Issue type is system defined and hence cannot be deleted.
 ## GlobalAttributeEdit
 CannotCreateDuplicateAttribute=Cannot create a duplicate Attribute with the same name.
 RecursiveParentChildRelationship=Sorry, a recursive Parent Child relationship is not allowed!
@@ -1067,11 +1068,13 @@ AttributeAdded=The attribute has been added.
 TypeCannotChange=Type cannot be changed once issues are entered using the attribute
 CannotCreateDuplicateOption=Cannot create a duplicate Attribute Option with the same name.
 CannotCreateChild=Cannot create a child of an Attribute Option that is marked as deleted.
+SystemSpecifiedAttribute=This attribute is associated with a system defined issue type and hence certain actions are restricted.
 
 ## ManageArtifactTypes
 NavIssueTypeLimit=You cannot select more than 5 issue types to appear in the top navigation.
 SelectIssueType=Please select an issue type.
 IssueTypeAlreadyAssociated=The issue type is already associated with the module.
+SystemSpecified=System defined
 4
 CannotZeroIssueType=You cannot have fewer than one issue type.
 SelectedIssueTypesRemovedFromModule=The selected issue types have been removed from the module.
