--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -571,6 +571,7 @@ Format=Format
 Web=Web
 Excel=Excel
 TabSeparatedValues=Tab separated values
+XML=XML
 
 ##EditXModuleList
 SaveXModuleList=Save cross module/issue type list
