Debugged and activated loading of the DTD as a classpath resource.
* src/i18n/ScarabBundle_en_US.properties
  InvalidDate: New L10N resource.


Issue: PCN20031

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -942,6 +942,7 @@ CouldNotFindGlobalAttribute=Could not find global attribute "{0}"
 CouldNotFindRModuleAttribute=Could not find module attribute "{0}"
 CouldNotFindAttributeOption=Could not find attribute option "{0}" for attribute "{1}"
 CouldNotFindModuleAttributeOption=Could not find module attribute option "{0}" for attribute "{1}"
+InvalidDate=Invalid date "{0}" for format "{1}"
 XMLModuleNotCurrent=XML module is "{0}", but current module is "{1}"
 
 ## Email Configuration
