--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1,5 +1,6 @@
 default.ScarabWordMark=Scarab
 AdvancedQuery.vm.Title=Advanced query
+ViewQuery.vm.Title=Review query
 AssignIssue.vm.Title=Associate users with issue
 ChangePassword.vm.Title=Change your password
 ConfigureIssueList.vm.Title=Add/Remove attributes from view
@@ -743,6 +744,7 @@ ModifyUserAttributes=On this screen, one can modify system wide user Attribute i
 NoItemsToApprove=There are no items to approve.
 ItemAlreadyApproved=Item "{0}" has already been approved by another user.
 ItemAlreadyRejected=Item "{0}" has already been rejected by another user.
+ReadOnlyViewOfQuery=The query below is presented for review purposes only.  Do not attempt to make modifications and after inspecting the query click 'Cancel' to return to the approval screen.
 AddPermission=Add permissions
 Permission=Permission
 AddRole=Add role
