If an RModuleAttribute has been incorrectly deleted, getTitle should still be able to give a reasonable title.
Modified files:
* src/i18n/ScarabBundle_en_US.properties - added NoAttributeToEdit key
  for title message in the event an attribute is not specified.
* src/java/org/tigris/scarab/screens/admin/ModuleAttributeEdit.java -
  getTitle: perform null checks to prevent a stacktrace in the event
  something has gone wrong.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1015,6 +1015,7 @@ ManageIssueTypes=Manage issue types - {0}
 
 ## ModuleAttributeEdit title
 EditModuleAttribute=Edit module attribute ''{0}''
+NoAttributeToEdit=Error! No attribute is specified to edit.
 
 ## UserAttributeEdit title
 EditGlobalUserAttribute=Edit global user attribute ''{0}''
