Do not allow to perform any actions except "Cross module query","Manage issue types" and "Approve/Reject user submission" if there are no issue types associated with the current module.
*src/java/org/tigris/scarab/screens/Default.java -
 #getTargetForNoIssueTypes():
 New method to return value of the property "template.[screen].noIssueTypesForwardsTo" if it is specified in Scarab.properties
 #doBuildTemplate()-Added condition to redirect to the alternate screen specified, if there are no issue types in the current module.

*src/conf/Scarab.properties -
 Added new resources for templates require issue types in the current module.

*src/i18n/ScarabBundle_en_US.properties -
 Added new resource "EnterNewIssueType"

*src/java/org/tigris/scarab/screens/entry/Wizard1.java -
 #getTitle():Removed unnecessary creation of String object.

*src/templates/navigations/CommonLinks.vm
*src/templates/screens/entry/Wizard3.vm -
 l10n.EnterNew replaced with $l10n.format("EnterNewIssueType", "value") to comply with the change made to "EnterNewIssueType" in resource bundle.

*src/templates/macros/MITListMacro.vm -
 Do not include current module's issue type if it's just been removed, in the cross module query tab.

*src/java/org/tigris/scarab/actions/Search.java -
 #doSavequery(): After saving a query, redirect to the cross module query page if the current issue type is null.

*src/java/org/tigris/scarab/actions/SelectIssueType.java -
 #doSelect():Check if the current issue type is still globally available. It is possible that it was globally removed
 before the user clicks that issue type in the "Enter new" tab.

*src/java/org/tigris/scarab/pipeline/FreshenUserValve.java -
 #setCurrentIssueType(): check that the current issue type is not deleted globally.

Issue        : PCN20782
Submitted by : Arun
Reviewed by  : Venkat, Dlr

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -297,6 +297,7 @@ ConfirmationCodeSent=Confirmation code sent!
 ## Enter/View issue
 ViewIssue=View issue
 EnterNew=Enter new
+EnterNewIssueType=Enter new "{0}"
 DefaultText=Default text attribute is used when more distinguishing information than the issue ID is needed. It is used in emails after an issue is entered, for example.
 StaticIssueInfo=Static issue info
 ReasonForChange=Reason for change
