--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -900,6 +900,7 @@ MissingXML=XML is missing or too small to process
 Unauthorized=The account is not authorized to perform this operation
 OldID=Original ID
 NewID=Imported ID
+IssueTypeLocked=Issue type {0} is locked
 
 ## Navigation
 IssueTrackingHome=Issue tracking home
