* ScarabIssues.java: doValidateevent(): check if issue type is inactive, not locked. We can import issues on locked issue types but not inactive ones. * ScarabBundle_en_US.properties: change IssueTypeLocked resource to IssueTypeInactive Issue number:  16131

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -900,7 +900,7 @@ MissingXML=XML is missing or too small to process
 Unauthorized=The account is not authorized to perform this operation
 OldID=Original ID
 NewID=Imported ID
-IssueTypeLocked=Issue type {0} is locked
+IssueTypeInactive=Issue type {0} is inactive, so issues cannot be imported for it.
 
 ## Navigation
 IssueTrackingHome=Issue tracking home
