[feature]added inital version of plugin manager (works: install plugin, plugin details)

--- a/res/org/columba/core/i18n/global/global.properties
+++ b/res/org/columba/core/i18n/global/global.properties
@@ -30,6 +30,8 @@ menu_edit_findagain = Find Again
 menu_edit_selectall = Select All
 menu_edit_selectnone = Select None
 
+menu_edit_pluginmanager=Plugin Manager..
+
 menu_view_showfiltertoolbar = Filter Toolbar
 menu_view_showtoolbar = Toolbar
 menu_view_showfolderinfo = FolderInfo Toolbar
