--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -947,7 +947,8 @@ CouldNotFindRModuleAttribute=Could not find module attribute "{0}"
 CouldNotFindAttributeOption=Could not find attribute option "{0}" for attribute "{1}"
 CouldNotFindModuleAttributeOption=Could not find module attribute option "{0}" for attribute "{1}"
 InvalidDate=Invalid date "{0}" for format "{1}"
-XMLModuleNotCurrent=XML module is "{0}", but current module is "{1}"
+XMLAndCurrentModuleMismatch=The module "{0}" specified via XML does not match the current module "{1}"
+XMLAndCurrentCodeMismatch=The module code "{0}" specified via XML does not match the current module''s code "{1}"
 
 ## Email Configuration
 EmailConfiguration=Email configuration
