* src/i18n/ScarabBundle_en_US.properties   PasswordsDoNotMatch, SomeIssueIdsNotValid: Removed apostrophes which   should not be present.
  IssueEntryP4, IssueEntryP6, IssueEntryP8, IssueEntryP10: Replaced
  site.com with example.com.

Submitted by: Greg Stein <gstein@lyra.org>

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -284,7 +284,7 @@ RegisterSessionError=Sorry! There is an error in your session. Please close your
 RegisterGroupIsNullError=Register group is null, please report this error.
 UsernameGroupIsNullError=Username field is null, please report this error.
 ConfirmFieldIsNullError=Confirm field is null, please report this error.
-PasswordsDoNotMatch=The password's you entered do not match!
+PasswordsDoNotMatch=The passwords you entered do not match!
 EmailHasBadDNS=Sorry, the email you submitted ({0}) does not have a DNS A or MX record defined. It is likely that the domain is invalid and that we cannot send you email. Please see ftp://ftp.isi.edu/in-notes/rfc2505.txt for more details. Please try another email address or contact your system administrator.
 InvalidEmailAddress=Sorry, you have attempted to register with a known invalid email: {0}. Please try another.
 UsernameExistsAlready=Sorry, a user with that user name already exists!
@@ -1261,7 +1261,7 @@ EnterQuery=Please enter a query.
 DateFormatPrompt=Please enter dates in the format mm/dd/yyyy.
 SearchFieldPrompt=Please enter a search field.
 QueryParserError=Search engine could not parse a text query.  Please review the {0}.
-SomeIssueIdsNotValid=Some issue ID''s in the original list are not valid: {0}
+SomeIssueIdsNotValid=Some issue IDs in the original list are not valid: {0}
 SomeIssuePKsNotValid=Database did not agree with specified issue list.
 ErrorProcessingQuery=There was an error processing your query: {0}
 ResourceLimitationsPreventedSearch=The current load on the application, prevented execution of the query.  Please try again later.
@@ -1527,13 +1527,13 @@ IssueEntryP2Head=Reproducible.
 IssueEntryP2=Issues that cannot be duplicated are generally   marked invalid. Provide detailed instructions for duplicating your issue.
 IssueEntryP3Head=Specific
 IssueEntryP3=The more details you provide the easier it   is for the engineer to identify the problem and solution.     
-IssueEntryP4=For example: you're testing a web browser. You crash at site.com, and want to write up an issue report:
+IssueEntryP4=For example: you're testing a web browser. You crash at example.com, and want to write up an issue report:
 IssueEntryP5=Inappropriate:
-IssueEntryP6="My browser crashed. I think I was on site.com. My computer uses Windows. I think that this is a really bad problem and you should fix it now. By the way, I don't like the icons. Nobody will use your software if you keep those ugly icons. Oh, and my grandmother's home page does not look right, either, it's all messed up. Good luck." 
+IssueEntryP6="My browser crashed. I think I was on example.com. My computer uses Windows. I think that this is a really bad problem and you should fix it now. By the way, I don't like the icons. Nobody will use your software if you keep those ugly icons. Oh, and my grandmother's home page does not look right, either, it's all messed up. Good luck." 
 IssueEntryP7=More appropriate:
-IssueEntryP8="I crashed each time when I went to site.com, using the 10.28.99 build on a Win NT 4.0 (Service Pack 5) system. I also rebooted into Linux, and reproduced this problem using the 10.28.99 Linux build.
+IssueEntryP8="I crashed each time when I went to example.com, using the 10.28.99 build on a Win NT 4.0 (Service Pack 5) system. I also rebooted into Linux, and reproduced this problem using the 10.28.99 Linux build.
 IssueEntryP9=It again crashed each time upon drawing the banner at the top of the page. I broke apart the page, and discovered that the following image link will crash the application reproducibly, unless you remove the "border=0" attribute:
-IssueEntryP10=&lt;IMG SRC="http://site.com/images/topics/topicfoos.gif" width=34 height=44 border=0 alt="News"&gt;
+IssueEntryP10=&lt;IMG SRC="http://example.com/images/topics/topicfoos.gif" width=34 height=44 border=0 alt="News"&gt;
 IssueEntryP11Head=Entering an issue
 IssueEntryP11=Because of it's highly customizable nature, entering issues in Scarab can be as individual as the person entering the issue. There are some basic principles that apply to all issues being entered in the database: for each issue entered you will define the issue and add supporting information. You may also be able to check the database for duplicates.
 IssueEntryP12Head=Defining issues
