--- a/antadapter/org/eclipse/jdt/internal/antadapter/messages.properties
+++ b/antadapter/org/eclipse/jdt/internal/antadapter/messages.properties
@@ -14,3 +14,8 @@ ant.jdtadapter.error.compilationFailed=Compilation failed. Compiler errors are a
 ant.jdtadapter.error.cannotFindJDTCompiler=Cannot find the JDT compiler
 ant.jdtadapter.info.ignoringMemoryInitialSize=Since fork is false, ignoring memoryInitialSize setting
 ant.jdtadapter.info.ignoringMemoryMaximumSize=Since fork is false, ignoring memoryMaximumSize setting
+
+checkDebugAttributes.file.argument.cannot.be.null=The file argument cannot be null
+checkDebugAttributes.property.argument.cannot.be.null=The property argument cannot be null
+checkDebugAttributes.ioexception.occured=IOException occured while reading 
+checkDebugAttributes.file.argument.must.be.a.classfile.or.a.jarfile=The file argument must be a .class or a .jar file
