* src/i18n/ScarabBundle_en_US.properties   StaticIssueInfo: Removed "static" prefix, as its obivously   non-edittable in the UI.
Submitted by: John McNally and Elicia David

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -299,7 +299,7 @@ ViewIssue=View issue
 EnterNew=Enter new
 EnterNewIssueType=Enter new "{0}"
 DefaultText=Default text attribute is used when more distinguishing information than the issue ID is needed. It is used in emails after an issue is entered, for example.
-StaticIssueInfo=Static issue info
+StaticIssueInfo=Issue info
 ReasonForChange=Reason for change
 EnterReason=This text will be added to this issue as a Reason for change when you select <strong>Done</strong>
 AssociatedPersonnel=Personnel associated with issue
