* ScarabBundle_en_US.properties: InvalidDate resource: add new argument for error message * ScarabIssues.java: validateDate():  send exception error message as an argument to the i18 resource. Issue number:  20224 Submitted by:  elicia

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -946,7 +946,7 @@ CouldNotFindGlobalAttribute=Could not find global attribute "{0}"
 CouldNotFindRModuleAttribute=Could not find module attribute "{0}"
 CouldNotFindAttributeOption=Could not find attribute option "{0}" for attribute "{1}"
 CouldNotFindModuleAttributeOption=Could not find module attribute option "{0}" for attribute "{1}"
-InvalidDate=Invalid date "{0}" for format "{1}"
+InvalidDate=Invalid date "{0}" for format "{1}" {2}
 XMLAndCurrentModuleMismatch=The module "{0}" specified via XML does not match the current module "{1}"
 XMLAndCurrentCodeMismatch=The module code "{0}" specified via XML does not match the current module''s code "{1}"
 
