*src/java/org/tigris/scarab/actions/ReportIssue.java  #doAddcomment(): Alert message key was changed. A new key(NoIssuesSelectedToAddComment) was added to display the alert message which is more appropriate to the context.
* src/i18n/ScarabBundle_en_US.properties
NoIssuesSelected : The value of this key was changed in an earlier commit(Revision 1.324).
But the previous value(Revision 1.323) is required to display the alert message in issue view page.(Used in
ViewIssueLong.vm file.). So, adding it back.

NoIssuesSelectedToAddComment: New L10N resource added to display alert message in  "possiable duplicate
issues" page, when the user clicks on "Add comment to selected" button without adding comments.

Issue : PCN19693
Committed by : Arun
Reviewed by : John McNally and Kevin Maples

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -508,7 +508,8 @@ SaveTemplate=Save template
 EditTemplate=Edit template
 
 ## entry/Wizard*
-NoIssuesSelected=You have not selected any artifacts to add comments to.
+NoIssuesSelected=No issues have been selected.
+NoIssuesSelectedToAddComment=You have not selected any issues to add comments to.
 AddInitialComment=Add initial comment
 
 ## Macros
