Modified Files: * src/conf/Scarab.properties - removed properties for XModuleList.vm   and ModuleQuery.vm and added them for IssueTypeList.vm * src/i18n/ScarabBundle_en_US.properties -   Added keys: IssueTypeList.vm.Title, EnterNewIssue, EnterNewBriefInstructions,   AdvancedQuery, CustomQuery, IssueTypeListMoreThanOne, NoIssueTypeList,   IssueTypesInModuleAndSavedLists, AllIssueTypesInModule, StartListFromSaved,   SavedListsOfIssueTypes, NoSavedIssueTypeLists, PreviouslySelectedIssueTypes,   OtherModuleIssuesInDomain, CurrentModuleTypesIntro, NewQuery,   NewQueryWithNewIssueTypes, TemplateListBriefInstructions   Modified keys: ToQuery, SelectSaveXModuleQuery, SelectSaveXModuleReport   Removed keys: home/ModuleQuery.vm.Title, home/XModuleList.vm.Title,   EnterNew, IssueTypesInModule, AllIssueTypes, BuildListOfIssueTypes,   UsePreviouslySavedList, ModuleIssuesInDomain, NewModuleQuery, Custom,   NewModuleQuery * src/java/org/tigris/scarab/actions/ConfigureIssueList.java - doSave:   add alert in the event the mitlist is null (this should not happen) * src/java/org/tigris/scarab/actions/ConfigureReport.java - doCreatenew:   if a mitlist (list of module/issue types) is available start on Info.vm   otherwise reports,XModuleList.vm * src/java/org/tigris/scarab/actions/DefineXModuleList.java - complete   refactoring to handle the main task of ModuleQuery action which is removed.   Also to support a quick issue type selection then going directly to   query/report without having to build up the list first.  Added a stub   method to allow removing previously saved lists, but its not implemented. * src/java/org/tigris/scarab/actions/QueryList.java - doSave():   remove variable that wasn't used.   doGotoadvancedquery: go to whichever query template is most appropriate   (might want to change the method name) * src/java/org/tigris/scarab/actions/ReportIssue.java - account for   scarabR.getNextEntryTemplate signature change.  and added doStart action   to remove an issue that was s

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -24,6 +24,7 @@ TemplateList.vm.Title=Template list
 UserList.vm.Title=Select users
 ViewIssue.vm.Title=View issue
 ViewIssueLong.vm.Title=View issues
+IssueTypeList.vm.Title=Build list of issue types
 
 admin/AddPermission.vm.Title=Permission administration
 admin/AddRole.vm.Title=Role administration
@@ -71,8 +72,6 @@ entry/Wizard2.vm.Title=Identified as duplicate
 entry/Wizard3.vm.Title=Enter issue
 
 home/EnterNew.vm.Title=Enter new...
-home/ModuleQuery.vm.Title=Module queries
-home/XModuleList.vm.Title=Cross module query
 
 help/Introduction.vm.Title=Scarab overview
 help/Navigation.vm.Title=Navigating Scarab
@@ -296,7 +295,8 @@ ConfirmationCodeSent=Confirmation code sent!
 
 ## Enter/View issue
 ViewIssue=View issue
-EnterNew=Enter new
+EnterNewIssue=Enter new issue
+EnterNewBriefInstructions=Click the issue type name to enter a new issue from scratch or select a template.
 EnterNewIssueType=Enter new "{0}"
 DefaultText=Default text attribute is used when more distinguishing information than the issue ID is needed. It is used in emails after an issue is entered, for example.
 StaticIssueInfo=Issue info
@@ -422,6 +422,8 @@ YouCannotAccessModules=Sorry, you do not have access to select any other modules
 RequestRoles=Request roles
 
 ##Search
+AdvancedQuery=Advanced query
+CustomQuery=Custom query
 NoCustomSearch=There are no custom search attributes designated for this artifact type, so the advanced query screen is being shown instead.
 ClickHereToSelectUsersForQuery=<a href="#add">Click here</a> to select users to associate with this query.
 TextSearch=Text search
@@ -442,6 +444,8 @@ CopyAll=Copy all
 CopySelected=Copy selected
 MoveAll=Move all
 MoveSelected=Move selected
+IssueTypeListMoreThanOne=Issue type list did not contain one and only one element.
+NoIssueTypeList=Lost track of the selected issue type(s).
 
 ##UserList
 Users=Users
@@ -558,15 +562,14 @@ Choose=Choose...
 SortBy=Sort by
 ModuleQuery=Module query
 BuildXModuleQuery=Build cross module query
-IssueTypesInModule=Issue types in this module
-ToQuery=To query a single issue type, click the issue type Name. To query multiple issue types, choose one of the options below, select the issue types you wish to query, and click "Go".
+IssueTypesInModuleAndSavedLists=Issue types in this module and saved lists
 QuerySelected=Query selected
 QuerySelectedDesc=query fields shared by selected issue types
 AllIssues=All issues
 AllIssuesDesc=generates a list of all issues within the selected issue types
 MyIssues=My issues
 MyIssuesDesc=generates a list of all issues associated with the logged in user
-AllIssueTypes=All issue types
+AllIssueTypesInModule=All issue types in {0}
 QueryAllIssueTypes=Query all issue types in this list
 ThereAreMoreComments=There are {0} more comments.
 QueryWarning=Note: if you set this query's scope to global, you will no longer be able to edit it. Please finish making all modifications to the query before you click "Save".
@@ -576,23 +579,27 @@ Excel=Excel
 TabSeparatedValues=Tab separated values
 
 ##EditXModuleList
+ToQuery=Use a previously saved issue type list or choose issue type(s) that will be searched then either click '{0}' to go to the next step or build a list of issue types incrementally.
 SaveXModuleList=Save cross module/issue type list
 SaveNewList=Save new list
 ChoosePredefinedList=As an alternative to creating a custom list above, you can choose one of the predefined lists below.  The difference in choosing the all modules, all issue types list below over building a custom list including all combinations shown above is evident when the list is used for a saved query.  With the predefined list, all saved queries which use it would automatically be updated with a new module.
 PredefinedLists=Predefined static cross module lists
 DefineQuery=Define query
-BuildListOfIssueTypes=Build list of issue types
-UsePreviouslySavedList=You can use a previously saved list as a starting point to create a  set of module / issue type pairs.  The list currently being created and any saved list are independent and later changes to either do not affect the other.
+StartListFromSaved=Build new list
+SavedListsOfIssueTypes=Saved lists of issue types
 NoIssueTypeSelected=No issue types have been selected.  Please select from the list below.
-SelectSaveXModuleQuery=Select a saved cross module query...
-SelectSaveXModuleReport=Select a saved cross module report...
-ModuleIssuesInDomain=Modules / issues in this domain
+SelectSaveXModuleQuery=Saved issue type lists...
+SelectSaveXModuleReport=Saved issue type lists...
+NoSavedIssueTypeLists=There are no saved issue type lists
+PreviouslySelectedIssueTypes=Previously selected issue types
+OtherModuleIssuesInDomain=Other modules / issue types in this domain
 FilterNoResults=Filtering produced no results; showing all issue types.
 NoMoreIssueTypes=There are no more issue types to select.
 MaxPerPage=Max items per page
 NumberOfIssues=Number of issues
 EnteringListWillOverwrite=Entering a previously saved list's name will overwrite the old list.
 EditingPreviouslySaved=Editing a previously saved list is not implemented.
+CurrentModuleTypesIntro=The current module is separated for convenient access.  Issue types in this section can be combined with those in the following section.
 
 ##Error
 StackTrace=Stack Trace
@@ -917,8 +924,8 @@ Scarab=Scarab
 Debugging=Debugging:
 IssueId=Issue ID
 SelectQuery=Select query...
-NewModuleQuery=New module query
-Custom=New custom query
+NewQuery=New query
+NewQueryWithNewIssueTypes=New query with new issue types
 MostRecent=Most recent
 SavedPersonalQueries=Saved queries (personal)...
 SavedProjectQueries=Saved queries (project)...
@@ -1186,6 +1193,7 @@ AnyHasReplacedPreviousChoices=The choice of "Any" has replaced previous choices.
 ChoiceAlreadyAccountedAny="Any" covers all attributes and "Created by"
 
 ## TemplateList
+TemplateListBriefInstructions=You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
 NewTemplateCreated=New template has been created.
 TemplateModified=Template has been modified.
 TemplateDeleted=Template has been deleted.
@@ -1791,7 +1799,6 @@ SearchingPerson=Searching by personnel
 SearchingChange=Searching by state change
 UQAP1=The advanced query form provides an interface for you to unambiguously define your search criteria. You can use this form to enter values for some, all or none of the attributes available in your issue type. You can further qualify your search criteria by requesting issues within a particular number range or date range. Say you want to know all closed issues relating to the AIX operating system within the last week. You can enter a date range (use the MM/DD/YYYY format, for instance, 01/01/2002) and define specific values for the operating system and status attributes. 
 UQAP1S2=You can access the advanced query form by choosing the
-NewModuleQuery=New module query
 UQAP1S3=option from the Select query list on the query bar. Clicking the 
 UQAP1S4=button will run the query.
 UQAP2=You can define values for some, none or all of the attributes. Scarab will search the knowledge base for issues that contain all of the values you have specified. The advanced query form allows you to define fine grained search criteria. There are three types of search criteria available on the advanced query form:
