Issue number: 15691 - remove current issue type concept Modified Files: * src/i18n/ScarabBundle_en_US.properties - ToQuery: needed to double the   single quote or use double quote.  Don't know which is better so switched   to double quote. * src/java/org/tigris/scarab/om/AbstractScarabUser.java * src/java/org/tigris/scarab/om/ScarabUser.java * src/java/org/tigris/scarab/om/ScarabUserImpl.java - modified the three   user classes/interface   getSearchableRMITs: add a module which should not be shown in the   cross module list, also fixed method to not return deleted issue types   so it doesn't have to be checked in the template.   added getUnusedRModuleIssueTypes: returns the RModuleIssueTypes that   are not already in the current MITList. * src/java/org/tigris/scarab/pipeline/FreshenUserValve.java - replace   home,XModuleList.vm with IssueTypeList.vm * src/templates/macros/MITListMacro.vm - reordered statements a bit to   not show the filter html if there are no other modules/issue types to be   shown. use changes in ScarabUser api to only show issue types that have   not been added to the current mitlist * src/templates/screens/IssueTypeList.vm - replace home,XModuleList.vm with   IssueTypeList.vm

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -579,7 +579,7 @@ Excel=Excel
 TabSeparatedValues=Tab separated values
 
 ##EditXModuleList
-ToQuery=Use a previously saved issue type list or choose issue type(s) that will be searched then either click '{0}' to go to the next step or build a list of issue types incrementally.
+ToQuery=Use a previously saved issue type list or choose issue type(s) that will be searched then either click "{0}" to go to the next step or build a list of issue types incrementally.
 SaveXModuleList=Save cross module/issue type list
 SaveNewList=Save new list
 ChoosePredefinedList=As an alternative to creating a custom list above, you can choose one of the predefined lists below.  The difference in choosing the all modules, all issue types list below over building a custom list including all combinations shown above is evident when the list is used for a saved query.  With the predefined list, all saved queries which use it would automatically be updated with a new module.
