--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+8/21/2003
+	- 1.4.0 released.
+
 8/20/2003
 	- Add the ReverseMap class, which contains functions to construct
 	  names to be used in reverse map zones.
