Issue : Whenever a 'filter' action produces no results, the alert message says "Filtering produced no results; showing all artifact types." regardless of whether the filtering  was based on module or issue types.
*src/i18n/ScarabBundle_en_US.properties -
Parameterised the "FilterNoResults" resource so that it can be used for both "module" and "issue type" based filtering.

src/templates/macros/MITListMacro.vm -
Pass the parameter, "module" or "issue type" depending upon the filter type to the L10N resource "FilterNoResults".

Issue : PCN20649
Committed by : arun@collab.net
Reviewed by : dlr@collab.net

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -593,7 +593,7 @@ SelectSaveXModuleReport=Saved issue type lists...
 NoSavedIssueTypeLists=There are no saved issue type lists
 PreviouslySelectedIssueTypes=Previously selected issue types
 OtherModuleIssuesInDomain=Other modules / issue types in this domain
-FilterNoResults=Filtering produced no results; showing all issue types.
+FilterNoResults=Filtering produced no results; showing all {0}.
 NoMoreIssueTypes=There are no more issue types to select.
 MaxPerPage=Max items per page
 NumberOfIssues=Number of issues
